# Matilda

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  matilda_test.cc
cmake/: CompilerFlags.cmake  CompilerFlags_AppleClang.cmake  CompilerFlags_Clang.cmake  CompilerFlags_Gnu.cmake  CompilerFlags_Intel.cmake  CompilerFlags_IntelLLVM.cmake  FindMatilda.cmake
include/: matilda.h
src/: CMakeLists.txt  config.h.cmake.in  matilda.cc  mvm_impl_avx2.h  mvm_impl_avx512.h  mvm_impl_omp_simd.h  version.h.cmake.in
